--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: Avenir Next;
-  src: url("../../public/fonts/Avenir\ Next.otf");
+  src: url("/public/fonts/Avenir\ Next.otf");
 }
